# Chess

./: CMakeLists.txt  main.cpp
include/: AssetManager.h  chess_board.h  engen.h  figure.h  game_settings.h  menu.h  window.h
src/: AssetManager.cpp
